bk_ida/gccida/g1/replace_reg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/replace_reg/src/reg-stack.c:1313:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( mode_class_0[*( ( unsigned __int8 *)v2 + 2)] & 0xFFFFFFFB) != 2 ) 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/replace_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/replace_reg/src/obj/reg-stack.o] Error 1
